package shapes;

public interface State {
    void mouseUp(Pos p);
    void mouseDown(Pos p);
    void mouseMove(Pos p);
}

